--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "format": "prettier --write 'src/**/*.ts'",
         "move:fixtures": "rimraf dist/tests/unit/fixtures && cp -r src/tests/unit/fixtures dist/tests/unit/fixtures",
         "pretest": "npm run build:test && npm run move:fixtures",
-        "test": "npm run lint && npm run test:unit && npm run test:integration",
+        "test": "npm run test:unit",
         "test:unit": "NODE_ENV=test mocha --opts mocha.opts",
         "test:integration": "NODE_ENV=test mocha --opts mocha.integration.opts",
         "coverage": "NODE_ENV=test nyc mocha --opts mocha.cover.opts"
