--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ workflows:
               tags:
                 only: /^(v){1}[0-9]+(\.[0-9]+){2}$/
               branches:
-                ignore: /.*/
+                only: /^master/
 
         - publish_next:
             requires:
